src/objects/Passenger_Manifest__c.object
<CustomObject>
    <description>Used to capture the passengers for a Trip, Itenerary, or Leg of a flight.</description>
    <fields>
        <fullName>Itinerary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which itinerary will these people be flying in?</inlineHelpText>
        <label>Itinerary</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Passenger Manifests WIP</relationshipLabel>
        <relationshipName>Passenger_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which leg of the flight will they be on board?</inlineHelpText>
        <label>Leg</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Passenger Manifest</relationshipLabel>
        <relationshipName>Passenger_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Passenger Manifests WIP</relationshipLabel>
        <relationshipName>Passenger_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Passenger Manifest</label>
    <nameField>
        <displayFormat>PM{00000}</displayFormat>
        <label>Passenger Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passenger Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>